--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # backend folders
 backend/venv/
 testAPIs
+backend/Farayad/Core/uploads/
 
 
 # Byte-compiled / optimized / DLL files
@@ -163,3 +164,4 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
