--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,20 @@
 asgiref==3.5.2
 Django==4.0.5
+django-ckeditor==6.4.2
+django-cors-headers==3.13.0
 django-filter==21.1
+django-js-asset==2.0.0
+django-quill-editor==0.1.40
+django-tinymce==3.4.0
+django-versatileimagefield==2.2
 djangorestframework==3.13.1
+djangorestframework-simplejwt==5.2.0
 importlib-metadata==4.11.4
-install==1.3.5
 Markdown==3.3.7
+Pillow==9.2.0
+PyJWT==2.4.0
+python-magic==0.4.27
+python-magic-bin==0.4.14
 pytz==2022.1
 sqlparse==0.4.2
 tzdata==2022.1
